# iptv-recorder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/iptv_recorder/: channels.py  cli.py  config.py  playlist.py  plex.py  recorder.py
tests/: test_config.py  test_playlist.py  test_recorder.py
