[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iptv-recorder"
version = "0.1.0"
description = "CLI tool to record IPTV streams and expose them in a local Plex server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "httpx>=0.27.0",
    "tzdata>=2024.1",
]

[project.scripts]
iptv-recorder = "iptv_recorder.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/iptv_recorder"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
